add form element code

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
   <h1>Your Favorite Things</h1>
+  <p>Choose 5 of your favorite things and write them in the forms below.</p>
+  <form>
+    <label for="favThing1">#1</label>
+    <input id="favThing1" type="text" name="favThing1"><br>
+    <label for="favThing2">#2</label>
+    <input id="favThing2" type="text" name="favThing2"><br>
+    <label for="favThing3">#3</label>
+    <input id="favThing3" type="text" name="favThing3"><br>
+    <label for="favThing4">#4</label>
+    <input id="favThing4" type="text" name="favThing4"><br>
+    <label for="favThing5">#5</label>
+    <input id="favThing5" type="text" name="favThing5"><br>
+    <button id="submitBtn" type="submit">Submit</button>
+  </form>
 </body>
 </html>
