change code to only display 3 results

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Your Favorite Things</h1>
-  <p>Choose 5 of your favorite things and write them in the forms below.</p>
+  <p>Choose 5 of your favorite things and write them in the forms below. Then, 3 of them will be displayed.</p>
   <form>
     <label for="favThing1">#1</label>
     <input id="favThing1" type="text" name="favThing1"><br>
